Fix about footer z-index

--- a/_webpack/stylesheets/_sidebar.scss
+++ b/_webpack/stylesheets/_sidebar.scss
@@ -58,6 +58,7 @@
   top: 0;
   bottom: 0;
   flex-direction: column;
+  z-index: 2;
 }
 
 .sidebar {
